--- a/src/explore.es.ipynb
+++ b/src/explore.es.ipynb
@@ -11,9 +11,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 3,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/workspace/.pyenv_mirror/user/current/lib/python3.12/site-packages/urllib3/connectionpool.py:1064: InsecureRequestWarning: Unverified HTTPS request is being made to host 'en.wikipedia.org'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
+                        "  warnings.warn(\n"
+                    ]
+                }
+            ],
             "source": [
                 "import os\n",
                 "from bs4 import BeautifulSoup\n",
@@ -22,7 +31,12 @@
                 "import sqlite3\n",
                 "import matplotlib.pyplot as plt\n",
                 "import seaborn as sns\n",
-                "\n"
+                "\n",
+                "url = \"https://en.wikipedia.org/wiki/List_of_most-streamed_songs_on_Spotify\"\n",
+                "response = requests.get(url, verify=False)\n",
+                "response\n",
+                "bs = BeautifulSoup(response.text, 'html.parser')\n",
+                "items = bs.find_all('table', class_=\"wikitable sortable plainrowheaders jquery-tablesorter\")\n"
             ]
         }
     ],
@@ -42,7 +56,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.4"
+            "version": "3.12.9"
         },
         "orig_nbformat": 4
     },
