--- a/src/solution.ipynb
+++ b/src/solution.ipynb
@@ -56,7 +56,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -77,7 +77,9 @@
                 "import io\n",
                 "\n",
                 "# Get the HTML\n",
-                "url = \"https://en.wikipedia.org/wiki/List_of_most-streamed_songs_on_Spotify\"\n",
+                "url = \"url = \"https://en.wikipedia.org/wiki/List_of_most-streamed_songs_on_Spotify\"\n",
+                "response = requests.get(url)\n",
+                "\n",
                 "response = requests.get(url)\n",
                 "\n",
                 "if response.status_code != 200:\n",
